AA Slider#form :: Fix issue with nested Slide input not showing up properly

--- a/app/assets/stylesheets/admin/_forms.sass
+++ b/app/assets/stylesheets/admin/_forms.sass
@@ -5,6 +5,9 @@
   form fieldset > ol > li fieldset:not(.has_many_fields) ol li:not(.hidden)
     padding: 10px !important
 
+  form fieldset > ol > li fieldset:not(.has_many_fields) ol .activeadmin-translations ul li
+    padding: 0 !important
+
   form fieldset > ol li p.inline-errors
     display: none
 
